# detectionofballotpaper

./: .gitignore  pyproject.toml
modules/: config.yaml  requirements.txt
modules/Annotate Datasets/Less overlapped/: annotations.csv
modules/ai_detection_model/src/: kaggle.json
modules/ballot_datasets/valid/: annotations.csv
modules/datasets/: Party Symbols.xlsx
modules/datasets/adhunik_nepal_samajwadi_party/: train.csv  train1.csv
modules/faster_rcnn_files/: class_summary_df - Copy.xlsx  class_summary_df.xlsx  class_summary_df_yolo.xlsx  df_total_comparisions.xlsx  infer_df.xlsx  preds_df.xlsx  total_comparisons_normalized.xlsx  total_comparisons_normalized_faster.xlsx  true_labels_df.xlsx
modules/metrics/: annotations.xlsx  class_summary_df.xlsx  class_summary_df_yolo.xlsx  denormalized_annotations.xlsx  detection_results.csv  infer_df.xlsx  infer_df_yolo.xlsx  normalized_annotations.xlsx  normalized_pred_labels.xlsx  pred_df_yolo.xlsx  preds_df.xlsx  true_df_yolo.xlsx  true_labels_df.xlsx  true_labels_df_yolo.xlsx  yolo_pred_labels.xlsx  yolo_pred_labels_normalized.xlsx  yolo_predicted_labels.csv  yolo_truth_annotations.xlsx
modules/yolo_files/: class_summary_df_yolo.xlsx  df_total_comparisions.xlsx  infer_df_yolo.xlsx  pred_labels_conerized_normalized.xlsx  pred_labels_cornerized.xlsx  pred_labels_normalized.xlsx  pred_labels_objeval_format.xlsx  total_comparisons_normalized.xlsx  total_comparisons_normalized_yolo.xlsx  true_labels_objeval_format.xlsx  true_labels_objeval_format_with_labels.xlsx  yolo_predicted_labels.csv
(+107 files in other folders)
